//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris.c;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris.c";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "javaclasses/exlibris/identifiers.proto";
import "javaclasses/exlibris/values.proto";
import "google/protobuf/timestamp.proto";

// The event fired when a librarian adds new `Book` to a library.
//
message InventoryCreated {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // When inventory was created.
    google.protobuf.Timestamp when_created = 2;
}

// The event fired when a librarian adds a new item to an inventory.
//
// An appended book becomes:
// 1. Available (if there is no reservations for this book).
// 2. Ready to pickup (for someone who reserved it).
//
message InventoryAppended {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The newly created item.
    InventoryItemId inventory_item_id = 2;

    // Optional field: exists when book has RFID mark.
    Rfid rfid = 3;

    // Who appended.
    UserId librarian_id = 4;

    // When an inventory was appended.
    google.protobuf.Timestamp when_appended = 5;
}

// The event appears when either an inventory appended or a book returned and there is no reservation.
//
// A book becomes public available.
//
message BookBecameAvailable {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The item which became available.
    InventoryItemId inventory_item_id = 2;

    // When book became available.
    google.protobuf.Timestamp when_became_available = 3;
}

// An event fired when a book is available for a user to take it.
//
// Appears when an inventory appended or a book returned.
//
// In 2 days this opportunity disappears and a reservation expires.
//
message BookReadyToPickup {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of an inventory item which became ready to pickup.
    InventoryItemId inventory_item_id = 2;

    // Who can take this book during 2 days.
    UserId for_whom = 3;

    // When a book became ready to pickup.
    google.protobuf.Timestamp when_became_ready_to_pickup = 4;

    // The pickup deadline of a book.
    google.protobuf.Timestamp pick_up_deadline = 5;
}

// An event fired when a user reserves a book.
//
// If a queue on book exists then user will be added to the queue.
// Else if book is available then user has 2 days to borrow book.
//
message ReservationAdded {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // Who reserved a book.
    UserId for_whom_reserved = 2;

    // The time when the reservation was added.
    google.protobuf.Timestamp when_created = 3;
}

// An event fired when user borrows book.
//
// Triggers 'reservation became loan' if the book was reserved.
//
message BookBorrowed {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of an item.
    InventoryItemId inventory_item_id = 2;

    // Who borrowed a book.
    UserId who_borrowed = 3;

    // The time when user borrowed a book.
    google.protobuf.Timestamp when_borrowed = 4;
}

// An event when a reservation was successfully finished.
//
message ReservationBecameLoan {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // Whose reservation became a loan.
    UserId user_id = 2;

    // Time when a reservation became a loan.
    google.protobuf.Timestamp when_became_loan = 3;
}

// An event fired when a user's loan period is overdue.
//
message LoanBecameOverdue {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of a loan.
    LoanId loan_id = 2;

    // The date when a book was expected, so an overdue period can be calculated.
    google.protobuf.Timestamp when_expected = 3;
}

// An event fired when user successfully extended his loan period.
//
message LoanPeriodExtended {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of a loan.
    LoanId loan_id = 2;

    // Who extended.
    UserId user_id = 3;

    // The timestamp of a previous due date.
    google.protobuf.Timestamp previous_due_date = 4;

    // The timestamp of a new due date.
    google.protobuf.Timestamp new_due_date = 5;
}

// An event fired when a user returns a book.
//
// User's loan is finished and the book becomes:
// 1. Available (if there is no reservations for this book).
// 2. Ready to pickup (for someone who reserved it).
//
message BookReturned {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of an item in inventory.
    InventoryItemId inventory_item_id = 2;

    // Who returned a book.
    UserId who_returned = 3;

    // The timestamp when user returned a book.
    google.protobuf.Timestamp when_returned = 4;
}

// An event fired when an user lost a borrowed book.
//
message BookLost {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of an inventory item.
    InventoryItemId inventory_item_id = 2;

    // Who lost a book.
    UserId who_lost = 3;

    // The timestamp when an user reported that he had lost a book.
    google.protobuf.Timestamp when_reported = 4;
}

// An event fired when user or system cancel a reservation.
//
// Can be canceled for these reasons:
// 1. User canceled reservation. In this case `whoCanceled` is ID of a user.
// 2. System cancel reservation because `Book` is removed. In this case `whoCanceled` is `botId`.
//
message ReservationCanceled {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // User who canceled a reservation.
    UserId who_canceled = 2;

    // The time when user canceled a reservation.
    google.protobuf.Timestamp when_canceled = 3;
}

// An event fired when a librarian decreases a current inventory.
//
// Will cancel all reservations if it is the last one in current inventory.
//
message InventoryDecreased {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The identifier of an item.
    InventoryItemId inventory_item_id = 2;

    // The librarian who decreased an inventory.
    UserId librarian_id = 3;

    // The time when inventory was decreased.
    google.protobuf.Timestamp when_decreased = 4;

    // A book can be lost or outdated.
    WriteOffReason write_off_reason = 5;
}

// An event fired when user had 2 days to take the book but he didn't.
//
message ReservationPickUpPeriodExpired {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // Whose pickup period expired.
    UserId user_id = 2;

    // The time when pickup period expired.
    google.protobuf.Timestamp when_expired = 3;
}

// An event fired when librarian removes `Book` from a library.
//
message InventoryRemoved {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The time when inventory was removed.
    google.protobuf.Timestamp when_removed = 2;
}

// An event fired when librarian adds new `Book` to a library.
//
// Should trigger a react in `Inventory`.
//
message BookAdded {

    // The identifier of a book.
    BookId book_id = 1;

    // Book details.
    BookDetails details = 2;

    // Who added a book.
    UserId librarian_id = 3;

    // The time when book was added.
    google.protobuf.Timestamp when_added = 4;
}

// An event when librarian changes incorrect info about `Book`.
//
message BookUpdated {

    // The identifier of a book.
    BookId book_id = 1;

    // Details of a current book.
    BookDetails current_book_details = 2;

    // New book details.
    BookDetails new_book_details = 3;

    // Who updated a book.
    UserId librarian_id = 4;

    // The time when book was updated.
    google.protobuf.Timestamp when_updated = 5;
}

// An event fired when librarian removes book from a library.
//
// Impossible when at least one user borrowed it.
//
// Also deletes inventory of this book.
//
message BookRemoved {

    // The identifier of a book.
    BookId book_id = 1;

    // Who removes a book.
    UserId librarian_id = 2;

    // The reason of removing book.
    //
    // Book could be removed with one of the following reasons:
    // 1. Book is outdated.
    // 2. Custom reason which is described by librarian.
    oneof book_removal_reason {
        bool outdated = 3;
        string custom_reason = 4;
    }

    // The time when book was removed.
    google.protobuf.Timestamp when_removed = 5;
}
